added to my homepage

--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -35,22 +35,21 @@
         </div>
     </div>
     <main class="home-grid">
-        <div class="attire"> 
-            <p>Ballet is all about discipline, grace, elegance and strength.To do that, evey ballet studio has its own rules. However, there are some common senses for the attire.
-            Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
-            </p>
-        </div>
-        <section class="dress">
-            <div class="dress-msg">
-                <span class="firstletter">Learning Ballet Terms</span>
+        <section class="fundation">
+            <div class="fundation-ballet"> 
+                <p>Ballet is all about discipline, grace, elegance and strength.To do that, evey ballet studio has its own rules. However, there are some common senses for the attire.
+                Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
+                <p></p>
+                <span class="firstletter">Learning Ballet Terms</span></p>
                 <p>Ballet has evolved into a popular and highly professional dance form with its vocabulary. The vocabulary of ballet has mainly stayed in French, and been learned and communicated by ballet professional dancers from all over the universe.
                    There are several terms used in this dance form that define the position,  steps as well as costumes.
                    For more, you can look up the website: 
                    <a href="https://www.inspireddance.org/dance-terms-and-exercises/dance-ballet-vocabulary?ssp_iabi=1677277102448">Ballet Vocabulary</a>
                 </p>
             </div>
-        <section class="bun">
-            <div class="bun-img">
+        </section>
+        <section class="hand">
+            <div class="hand-img">
                 <h2>Hand Positions</h2>
                 <img src="images/hand-positions.png" alt="Hand Positions">
                 <p class="credit">image credit: https://www.supercoloring.com/coloring-pages/ballet-positions
@@ -58,48 +57,161 @@
                     <br>Attribution-NonCommercial
                 </p>
             </div>
-            <div class="bun-msg">   
-                <span class="title">1. First Position: </span>arms held out in front of the body with rounded elbows in an oval shape, sloping down from the shoulders.
-                <span class="title">2. Second Position: </span>arms held out to the sides, horizontal with a slight slope downwards from shoulders to wrist.
-                <span class="title">3. Third Position: </span>one arm held forward in first position, the other arm held to the side in second position
-                <span class="title">4. Fourth Position: </span>one arm held to the side in second position, the other arm raised up above the head, held slightly forward.
-                <span class="title">5. Fifth Position: </span> both arms raised up above the head, held slightly forward
+            <div class="hand-msg">   
+                <p>
+                <br><span class="title">1. First Position: </span>arms held out in front of the body with rounded elbows in an oval shape, sloping down from the shoulders.
+                <br><span class="title">2. Second Position: </span>arms held out to the sides, horizontal with a slight slope downwards from shoulders to wrist.
+                <br><span class="title">3. Third Position: </span>one arm held forward in first position, the other arm held to the side in second position
+                <br><span class="title">4. Fourth Position: </span>one arm held to the side in second position, the other arm raised up above the head, held slightly forward.
+                <br><span class="title">5. Fifth Position: </span> both arms raised up above the head, held slightly forward</p>
              </div>
         </section>
-        <section class="shoes">
-            <div class="shoes-img">
+        <section class="feet">
+            <div class="feet-img">
                 <h3>Feet Positions</h3>
-                <img src="images/feet-position2.jpg" alt="Feet Positions">
+                <img src="images/feet-position.jpg" alt="Feet Positions">
                 <p class="credit">image credit: https://balletaz.org/classical-ballet/
                     <br>Attribution-NonCommercial
                 </p>
             </div>
-            <div class="shoes-msg">
-                <span class="title">1. First Position: </span>heels together, toes pointed outwards to the side.
-                <span class="title">2. Second Position: </span>legs are moved apart, hip width apart, toes pointed outwards to the side
-                <span class="title">3. Third Position: </span>feet pointed outwards, one foot placed in front of the other with front heel touching the back foot’s instep
-                <span class="title">4. Fourth Position: </span>
-                    <br>Open: feet pointed outwards, with legs in third position but spread apart
-                    <br>Crossed: feet pointed outwards, legs spread apart with one foot placed in front of the other, and the front foot is placed opposite the toes of the back foot
-                <span class="title">5. Fifth Position: </span> feet pointed outwards, legs crossed and feet touching, with the heel of one foot placed beside the toes of the other
+            <div class="feet-msg">
+                <p>
+                <br><span class="title">1. First Position: </span>heels together, toes pointed outwards to the side.
+                <br><span class="title">2. Second Position: </span>legs are moved apart, hip width apart, toes pointed outwards to the side
+                <br><span class="title">3. Third Position: </span>feet pointed outwards, one foot placed in front of the other with front heel touching the back foot’s instep
+                <br><span class="title">4. Fourth Position: </span>
+                <br><span>**</span><span class="sub-title">Open:</span> feet pointed outwards, with legs in third position but spread apart
+                <br><span>**</span><span class="sub-title">Crossed:</span> feet pointed outwards, legs spread apart with one foot placed in front of the other, and the front foot is placed opposite the toes of the back foot.
+                <br><span class="title">5. Fifth Position: </span> feet pointed outwards, legs crossed and feet touching, with the heel of one foot placed beside the toes of the other</p>
             </div>
         </section>
-        <section class="tendu">
-            <div class="tendu-img">
-                <h4>Tendu</h4>
-                <img src="images/tendu.JPG" alt="Tendu">
-                <p class="credit">image credit: https://dance.fandom.com/wiki/Tendu
-                    <br>Attribution-NonCommercial
-                </p>
-            </div>
+        <section class="movement">
+            <section id="exercise">
+                <p></p>
+                <p><span class="firstletter">6 Basic Ballet Exercises</span></p>
+            </section>
+            <section id="port">
+                <div class="port-img">
+                    <h1>1. Port de bras</h1>
+                    <img src="images/Port-de-bras.JPG" alt="Port de bras">
+                    <p class="credit">image credit: https://www.balletbodysculpture.com/blog/2019/1/13/9-basic-ballet-terms-benefits
+                        <br>Attribution-NonCommercial
+                    </p>
+                </div>
+                <div class="port-msg">           
+                    <p>Carriage of the arms. In general, the use or movement of the arms through either specified classical positions 
+                        or as they are placed in choreography. Excellent move to improve your posture, tone the arms and back muscles. </P>
+                </div>
+            </section>
+            <section id="pile">
+                <div class="pile-img">
+                    <h1>2. Pile</span></h1>
+                    <img src="images/pile.jpg" alt="Pile">
+                    <p class="credit">image credit: https://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
+                    </p>
+                </div>
+                <div class="pile-msg">           
+                    <p>Pliés, French for “bend,” are a simple movement in which you bend with your knees without your heels leaving the ground.
+                       A basic plié requires only a small bend, while other types like demi pliés and grand pliés involve a half bend or even full (90-degree-angle) bend of your knees.
+                       When doing pliés to warm up, it’s best to do them in each ballet position—from first position to second position to fifth—to stretch a wide range of muscles. 
+                       Pliés are the perfect exercise to begin a ballet warm-up, because they stretch every muscle in the legs, from your glutes to your inner thighs to your ankles. </P>
+                </div>
+                <div class="pile-img2">    
+                    <div id="demi">
+                        <p class="sub-title">Demi Pile</p>
+                        <img  src="images/demi-plie.jpg" alt="Demi Pile">
+                        <p class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
+                        </p>
+                    </div>
+                    <div id="grand">
+                        <p class="sub-title">Grand Pile</p>
+                        <img src="images/grand-pile.jpg" alt="Grand Pile">
+                        <p class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section id="eleves">
+                <div class="eleves-img">
+                    <h1>3. Elevés and relevés</h1>
+                    <img src="images/releve-eleve.jpg" alt="Elevés and relevés">
+                    <p class="credit">image credit: https://www.pinterest.com/pin/375276581458634368/
+                    </p>
+                </div>
+                <div class="eleves-msg">           
+                    <p>Elevés and relevés are two movements in which you raise your heels from the floor, rolling up onto the balls of your feet—elevés from one of the five ballet positions,
+                       and relevés from a plié position. Elevés and relevés strengthen your feet, ankles, and calves and are a great foundation for pirouettes and work in pointe shoes. </P>
+                </div>
+            </section>
+            <section id="tendu">
+                <div class="tendu-img">
+                    <h1>4. Tendu</h1>
+                    <img src="images/tendu2.JPG" alt="Tendu">
+                    <p class="credit">image credit: https://dance.fandom.com/wiki/Tendu
+                        <br>Attribution-NonCommercial
+                    </p>
+                </div>
+                <div class="tendu-msg">
+                    <p>To perform a tendu, French for stretch, begin in either first or fifth position and slowly brush your working foot outward until it rests in a strong point away from you. 
+                        Then, brush your foot back toward you and bring it back to your starting position. Tendus can be done to the front (devant), to the side (à la seconde), 
+                        or to the back (derriére), and they stretch leg muscles and help improve turnout (outward rotation of your legs and feet). </P>
+                </div>
+                <div class="tendu-img2">           
+                    <img src="images/tendu.JPG" alt="Tendu2">
+                </div>
+            </section>
+            <section id="degages">
+                <div class="degages-img">
+                    <h1>5. Dégagés</h1>
+                    <img src="images/degages.JPG" alt="Dégagés">
+                    <p class="credit">image credit: https://aballeteducation.com/notes-on-degages/
+                        <br>Attribution-NonCommercial
+                    </p>
+                </div>
+                <div class="degages-msg">           
+                    <p>Dégagés are a similar movement to a tendu, in which you extend your working foot outward, but for a dégagé, your foot should be slightly off of the floor. 
+                        Dégagés can be done to the front, to the side, or to the back, and they stretch leg muscles and help improve turnout. </P>
+                </div>
+            </section>
+            <section id="round">
+                <div class="round-img">
+                    <h1>6. Rond de jambe</h1>
+                    <img src="images/round.png" alt="Rond de jambe">
+                    <p class="credit">image credit: https://zh-yue.m.wikipedia.org/wiki/File:Santavuori-balettia-kaikille-ronddejambe.png
+                        <br>Attribution-NonCommercial
+                    </p>
+                </div>
+                <div class="round-msg">           
+                    <p>A rond de jambe, which literally means “circular movement of the leg,” is done by using your working leg to make a semi-circular movement across the floor, 
+                        either from your front to your back or vice versa. Rond de jambes stretch your hip muscles and help improve turnout. </P>
+                </div>
+            </section>
+            <section id="sautes">
+                <div class="sautes-img">
+                    <h1>7. Sautés</h1>
+                    <img src="images/sautes.JPG" alt="Sautés">
+                    <p class="credit">image credit: https://www.pinterest.com/pin/809873945477158000/visual-search/?x=0&y=37&w=563&h=382&cropSource=4&full_feed_title=Artwork&imageSignature=ea9a7e52286ab03b7a678f9dd7c8d77c
+                        <br>Attribution-NonCommercial
+                    </p>
+                </div>
+                <div class="sautes-msg">           
+                    <p>The sauté is the simplest jumping step in ballet. To do a sauté, begin with a plié, then leap upward so that both feet are in a pointed position in the air. 
+                        Then, land back in a plié. While sautés are usually done without a ballet barre, barre classes will have students do sautés with the barre to help them get the lift 
+                        they need to point their toes. Sautés are a great way to engage your leg muscles and practice control in the air. </P>
+                </div>
+            </section>
+
         </section>
-        <section class="arabesque">
-            <div class="arabesque-img">
-                <h5>Arabesque</h5>
-                <img src="images/arabesque.jpg" alt="Arabesque">
-                <p class="credit">image credit: https://www.pinterest.com/pin/217017275778802816/
-                </p>
-            </div>
+        <section class="music">
+            <h1>Ballet Music</h1>
+            <a class="ballet" href="https://soundcloud.com/music-for-ballet-classes"><img src="images/ballet.jpg" alt="Ballet Music"></a>
+
+            <p class="music-msg"><span class="firstletter">Music for Ballet</span>
+            Ballet has evolved into a popular and highly professional dance form with its vocabulary. The vocabulary of ballet has mainly stayed in French, and been learned and communicated by ballet professional dancers from all over the universe.
+            There are several terms used in this dance form that define the position,  steps as well as costumes.
+            For more, you can look up the website: 
+            
+            </p>
         </section>
     </main>
     <footer>
