--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -174,39 +174,43 @@
         <br>Ballet is all about discipline, grace, elegance and strength.To do that, evey ballet studio has its own rules. However, there are some common senses for the attire.
         <br>Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="images/ballet-attire.png" alt="image for page2">
-        <br>image credit: https://www.dance10.org/about/dress-code/ballet-classes/
-        <br>Attribution-NonCommercial
-        <p>Ballet attire</p>            
-        <p>First, you can choose to wear a leggings with a cap sleeve or sleeveless tops shown as the above home image, or tights with a leotard and a sheer wrap skirt shown as the right image.
-           The dress code is you have to make room for better flexibility, plus it also helps minimise the risk of sustaining injury by keeping the leg muscles warm. 
-           Moreover, it will make your teachers see your alignment, allowing them to correct the next steps compared to baggy clothes, hiding poor practices.
-        <br>Second, don't wear jewelry or a wristwatch to dance class since it may fly off while you are moving and hit someone. Additionally, it impair technique.
-        <br>Third, choose a suitable soft ballet shoes if you are a beginner.
-        <br>Fourth, tie your hair secured back and off the face to avoid interfering with steps like pirouettes or jumps. </P>
-    </div>
+      <p>Ballet attire</p>            
+      <p>First, you can choose to wear a leggings with a cap sleeve or sleeveless tops shown as the above home image, or tights with a leotard and a sheer wrap skirt shown as the right image.
+         The dress code is you have to make room for better flexibility, plus it also helps minimise the risk of sustaining injury by keeping the leg muscles warm. 
+         Moreover, it will make your teachers see your alignment, allowing them to correct the next steps compared to baggy clothes, hiding poor practices.
+      <br>Second, don't wear jewelry or a wristwatch to dance class since it may fly off while you are moving and hit someone. Additionally, it impair technique.
+      <br>Third, choose a suitable soft ballet shoes if you are a beginner.
+      <br>Fourth, tie your hair secured back and off the face to avoid interfering with steps like pirouettes or jumps. </P>
       <p>How to tie a basic ballet bun</p>
-        <img src="images/ballet-bun.png" alt="Ballet bun">
-        <br>image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun
-        <br>Attribution-NonCommercial
-        <p>A ballet bun is quite simple to do. With a little practice, you will get the perfect “cinnamon bun”.
+      <p>A ballet bun is quite simple to do. With a little practice, you will get the perfect “cinnamon bun”.
         <br>1. Brush your hair.</span>To start, get your hair free of tangles.
         <br>2. Pull your hair back into a ponytail and secure with an elastic.</span>
         <br>3. Twist the bun into a rope and wrap the rope in a circle around the elastic.</span>Wrap the rope around in a circle around the elastic.
         <br>4. Use hairpins to secure the bun to your head.</span> Secure the bun to your head using U-shaped hair pins not bobby pins to grab hair from the top of your bun.
         <br>5. Wrap the hair net around the bun and secure with more pins to secure all the loose hairs.</span> Cover your bun with a hair net that matches your hair color to keep all wisps and stray hairs in place.
         <br>6. Use hairspray, gel, or bobby pins / clips to tame the loose hairs away from your face.</span> For an extra hold and overall neat look, use hairspray to slick all the loose wisps or fizz from your hairline flat on the head.</P>             
-        </p>
+      </p>
       <p>How to buy shoes</p>
+      <p>Ballet shoes play an important role for safely practicing ballet movements. 
+        <br>Opt for a pair of Ballet slippers rather than pointe shoes – they’re soft & easy for beginners to wear.
+        <br>There are three kinds of materials to choose- satin, canvas, and leather. 
+        <br>Among them, canvas are the most popular ballet shoes; on the contrary, leather ones are more expensive but rather durable. 
+        <br>Satin ones are preferred for performances but the least durable.</p>
+
+      <p>Images for the Page 2</p>
+        <img src="images/ballet-attire.png" alt="image for page2">
+        <br>image credit: https://www.dance10.org/about/dress-code/ballet-classes/
+        <br>Attribution-NonCommercial
+
+        <img src="images/ballet-bun.png" alt="Ballet bun">
+        <br>image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun
+        <br>Attribution-NonCommercial
+
+
         <img src="images/ballet-shoes.jpg" alt="image for page2">
         <br>image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/
         <br>Attribution-NonCommercial
-        <p>Ballet shoes play an important role for safely practicing ballet movements. 
-          <br>Opt for a pair of Ballet slippers rather than pointe shoes – they’re soft & easy for beginners to wear.
-          <br>There are three kinds of materials to choose- satin, canvas, and leather. 
-          <br>Among them, canvas are the most popular ballet shoes; on the contrary, leather ones are more expensive but rather durable. 
-          <br>Satin ones are preferred for performances but the least durable.</p>
+
       </ul>
       <hr>
       <h3>Ballet Terms</h3>
@@ -228,23 +232,75 @@
             <br>Open: feet pointed outwards, with legs in third position but spread apart
             <br>Crossed: feet pointed outwards, legs spread apart with one foot placed in front of the other, and the front foot is placed opposite the toes of the back foot
         <br><span class="title">5. Fifth Position: </span> feet pointed outwards, legs crossed and feet touching, with the heel of one foot placed beside the toes of the other
+        <br>
+        <br><span></span>6 Basic Ballet Exercises</span>
+        <br><span>1. Port de bras</span>
+        <br>Carriage of the arms. In general, the use or movement of the arms through either specified classical positions 
+        or as they are placed in choreography. Excellent move to improve your posture, tone the arms and back muscles. 
+        <br><span>2. Pile</span>
+        <br>Pliés, French for “bend,” are a simple movement in which you bend with your knees without your heels leaving the ground.
+        A basic plié requires only a small bend, while other types like demi pliés and grand pliés involve a half bend or even full (90-degree-angle) bend of your knees.
+        When doing pliés to warm up, it’s best to do them in each ballet position—from first position to second position to fifth—to stretch a wide range of muscles. 
+        Pliés are the perfect exercise to begin a ballet warm-up, because they stretch every muscle in the legs, from your glutes to your inner thighs to your ankles.
+        <br><span>3. Elevés and relevés</span>
+        <br>Elevés and relevés are two movements in which you raise your heels from the floor, rolling up onto the balls of your feet—elevés from one of the five ballet positions,
+        and relevés from a plié position. Elevés and relevés strengthen your feet, ankles, and calves and are a great foundation for pirouettes and work in pointe shoes.
+        <br><span>4. Tendu</span>
+        <br>To perform a tendu, French for stretch, begin in either first or fifth position and slowly brush your working foot outward until it rests in a strong point away from you. 
+        Then, brush your foot back toward you and bring it back to your starting position. Tendus can be done to the front (devant), to the side (à la seconde), 
+        or to the back (derriére), and they stretch leg muscles and help improve turnout (outward rotation of your legs and feet).
+        <br><span>5. Dégagés</span>
+        <br>Dégagés are a similar movement to a tendu, in which you extend your working foot outward, but for a dégagé, your foot should be slightly off of the floor. 
+        Dégagés can be done to the front, to the side, or to the back, and they stretch leg muscles and help improve turnout.
+        <br><span>6. Rond de jambe</span>
+        <br>A rond de jambe, which literally means “circular movement of the leg,” is done by using your working leg to make a semi-circular movement across the floor, 
+        either from your front to your back or vice versa. Rond de jambes stretch your hip muscles and help improve turnout.      
+        <br><span>7. Sautés</span>
+        <br>The sauté is the simplest jumping step in ballet. To do a sauté, begin with a plié, then leap upward so that both feet are in a pointed position in the air. 
+        Then, land back in a plié. While sautés are usually done without a ballet barre, barre classes will have students do sautés with the barre to help them get the lift 
+        they need to point their toes. Sautés are a great way to engage your leg muscles and practice control in the air.
+        <br>
+        <br><span>Ballet Music</span>
+        <br><span>Music for Ballet</span>
+        <br>allet has evolved into a popular and highly professional dance form with its vocabulary. The vocabulary of ballet has mainly stayed in French, and been learned and communicated by ballet professional dancers from all over the universe.
+        There are several terms used in this dance form that define the position,  steps as well as costumes.
+        For more, you can look up the website:   
+      
+      </P>
 
-      </p>
       <p>Images for the Page 3</p>
         <img src="images/hand-positions.png" alt="image for page3">
         <br>Author: Artsashina
         <br>image credit: https://www.supercoloring.com/coloring-pages/ballet-positions
         <br>Attribution-NonCommercial
-        <img src="images/feet-position2.jpg" alt="image for page3">
+        <img src="images/feet-position.jpg" alt="image for page3">
         <br>image credit: https://balletaz.org/classical-ballet/
         <br>Attribution-NonCommercial
-        <img src="images/tendu.JPG" alt="image for page3">
+        <img src="images/Port-de-bras.JPG" alt="Port de bras">
+        <br>image credit: https://www.balletbodysculpture.com/blog/2019/1/13/9-basic-ballet-terms-benefits
+        <br>Attribution-NonCommercial
+        <img src="images/pile.jpg" alt="Pile">
+        <br>image credit: https://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
+        <img  src="images/demi-plie.jpg" alt="Demi Pile">
+        <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs       
+        <img src="images/grand-pile.jpg" alt="Grand Pile">
+        <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
+        <img src="images/releve-eleve.jpg" alt="Elevés and relevés">
+        <br>image credit: https://www.pinterest.com/pin/375276581458634368/
+        <img src="images/tendu2.JPG" alt="Tendu">
         <br>image credit: https://dance.fandom.com/wiki/Tendu
         <br>Attribution-NonCommercial
-        <img src="images/arabesque.jpg" alt="image for page3">
-        <br>image credit: https://www.pinterest.com/pin/217017275778802816/
-
-        
+        <img src="images/tendu.JPG" alt="Tendu2">
+        <img src="images/degages.JPG" alt="Dégagés">
+        <br>image credit: https://aballeteducation.com/notes-on-degages/
+        <br>Attribution-NonCommercial
+        <img src="images/round.png" alt="Rond de jambe">
+        <br>image credit: https://zh-yue.m.wikipedia.org/wiki/File:Santavuori-balettia-kaikille-ronddejambe.png
+        <br>Attribution-NonCommercial
+        <img src="images/sautes.JPG" alt="Sautés">
+        <br>image credit: https://www.pinterest.com/pin/809873945477158000/visual-search/?x=0&y=37&w=563&h=382&cropSource=4&full_feed_title=Artwork&imageSignature=ea9a7e52286ab03b7a678f9dd7c8d77c
+        <br>Attribution-NonCommercial
+        <img src="images/ballet.jpg" alt="Ballet Music">
 
       </ul>
       <hr>
