--- a/ballet/ballet-attire.html
+++ b/ballet/ballet-attire.html
@@ -35,14 +35,17 @@
         </div>
     </div>
     <main class="home-grid">
-        <div class="attire"> 
-            <p>Ballet is all about discipline, grace, elegance and strength.To do that, evey ballet studio has its own rules. However, there are some common senses for the attire.
-            Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
-            </p>
-        </div>
+        <section class="fundation">
+            <div class="fundation-ballet"> 
+                <p>Ballet is all about discipline, grace, elegance and strength.To do that, evey ballet studio has its own rules. However, there are some common senses for the attire.
+                Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
+                </p>
+                <span class="firstletter">Wearing the Right Outfit</span>
+            </div>
+        </section>
+
         <section class="dress">
             <div class="dress-img">
-                <span class="firstletter">Wearing the Right Outfit</span>
                 <img src="images/ballet-attire.png" alt="Ballet attire">
                 <p class="credit">image credit: https://www.dance10.org/about/dress-code/ballet-classes/
                     <br>Attribution-NonCommercial
@@ -57,6 +60,7 @@
                 <P><span class="title">Third, </span>choose a suitable soft ballet shoes if you are a beginner.</P>
                 <P><span class="title">Fourth, </span>tie your hair secured back and off the face to avoid interfering with steps like pirouettes or jumps. </P>
             </div>
+        </section>
         <section class="bun">
             <div class="bun-img">
                 <h2>How to tie a basic ballet bun</h2>
@@ -85,10 +89,11 @@
             </div>
             <div class="shoes-msg">
                 <p>Ballet shoes play an important role for safely practicing ballet movements. 
-                <br>Opt for a pair of Ballet slippers rather than pointe shoes – they’re soft & easy for beginners to wear.
-                <br>There are three kinds of materials to choose- satin, canvas, and leather. 
-                <br>Among them, canvas are the most popular ballet shoes; on the contrary, leather ones are more expensive but rather durable. 
-                <br>Satin ones are preferred for performances but the least durable.</p>
+                    Opt for a pair of Ballet slippers rather than pointe shoes – they’re soft & easy for beginners to wear.
+                    There are three kinds of materials to choose- <span class="title">satin, canvas, and leather</span>. 
+                    Among them, <span class="title">canvas</span> are the most popular ballet shoes; on the contrary, 
+                    <span class="title">leather</span> ones are more expensive but rather durable. 
+                    <span class="title">Satin</span> ones are preferred for performances but the least durable.</p>
             </div>
         </section>
     </main>
