added to my homepage

--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -82,7 +82,7 @@
                 <br><span class="title">4. Fourth Position: </span>
                 <br><span>**</span><span class="sub-title">Open:</span> feet pointed outwards, with legs in third position but spread apart
                 <br><span>**</span><span class="sub-title">Crossed:</span> feet pointed outwards, legs spread apart with one foot placed in front of the other, and the front foot is placed opposite the toes of the back foot.
-                <br><span class="title">5. Fifth Position: </span> feet pointed outwards, legs crossed and feet touching, with the heel of one foot placed beside the toes of the other</p>
+                <br><span class="title">5. Fifth Position: </span> feet pointed outwards, legs crossed and feet touching, with the heel of one foot placed beside the toes of the other.</p>
             </div>
         </section>
         <section class="movement">
