added to my homepage

--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -93,7 +93,7 @@
             <section id="port">
                 <div class="port-img">
                     <h1>1. Port de bras</h1>
-                    <img src="images/Port-de-bras.JPG" alt="Port de bras">
+                    <img src="images/Port-de-bras.jpg" alt="Port de bras">
                     <p class="credit">image credit: https://www.balletbodysculpture.com/blog/2019/1/13/9-basic-ballet-terms-benefits
                         <br>Attribution-NonCommercial
                     </p>
@@ -146,7 +146,7 @@
             <section id="tendu">
                 <div class="tendu-img">
                     <h1>4. Tendu</h1>
-                    <img src="images/tendu2.JPG" alt="Tendu">
+                    <img src="images/tendu2.jpg" alt="Tendu">
                     <p class="credit">image credit: https://dance.fandom.com/wiki/Tendu
                         <br>Attribution-NonCommercial
                     </p>
@@ -157,13 +157,13 @@
                         or to the back (derriére), and they stretch leg muscles and help improve turnout (outward rotation of your legs and feet). </P>
                 </div>
                 <div class="tendu-img2">           
-                    <img src="images/tendu.JPG" alt="Tendu2">
+                    <img src="images/tendu.jpg" alt="Tendu2">
                 </div>
             </section>
             <section id="degages">
                 <div class="degages-img">
                     <h1>5. Dégagés</h1>
-                    <img src="images/degages.JPG" alt="Dégagés">
+                    <img src="images/degages.jpg" alt="Dégagés">
                     <p class="credit">image credit: https://aballeteducation.com/notes-on-degages/
                         <br>Attribution-NonCommercial
                     </p>
@@ -189,7 +189,7 @@
             <section id="sautes">
                 <div class="sautes-img">
                     <h1>7. Sautés</h1>
-                    <img src="images/sautes.JPG" alt="Sautés">
+                    <img src="images/sautes.jpg" alt="Sautés">
                     <p class="credit">image credit: https://www.pinterest.com/pin/809873945477158000/visual-search/?x=0&y=37&w=563&h=382&cropSource=4&full_feed_title=Artwork&imageSignature=ea9a7e52286ab03b7a678f9dd7c8d77c
                         <br>Attribution-NonCommercial
                     </p>
