added to my homepage

--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -276,31 +276,31 @@
         <img src="images/feet-position.jpg" alt="image for page3">
         <br>image credit: https://balletaz.org/classical-ballet/
         <br>Attribution-NonCommercial
-        <img src="images/Port-de-bras.jpg" alt="Port de bras">
+        <img src="images/port-de-bras.JPG" alt="Port de bras">
         <br>image credit: https://www.balletbodysculpture.com/blog/2019/1/13/9-basic-ballet-terms-benefits
         <br>Attribution-NonCommercial
         <img src="images/pile.jpg" alt="Pile">
         <br>image credit: https://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
-        <img  src="images/demi-plie.jpg" alt="Demi Pile">
+        <img  src="images/demi-plie.JPG" alt="Demi Pile">
         <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs       
         <img src="images/grand-pile.jpg" alt="Grand Pile">
         <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
-        <img src="images/releve-eleve.jpg" alt="Elevés and relevés">
+        <img src="images/releve-eleve.JPG" alt="Elevés and relevés">
         <br>image credit: https://www.pinterest.com/pin/375276581458634368/
         <img src="images/tendu2.jpg alt="Tendu">
         <br>image credit: https://dance.fandom.com/wiki/Tendu
         <br>Attribution-NonCommercial
-        <img src="images/tendu.jpg" alt="Tendu2">
+        <img src="images/tendu.JPG" alt="Tendu2">
         <img src="images/degages.jpg" alt="Dégagés">
         <br>image credit: https://aballeteducation.com/notes-on-degages/
         <br>Attribution-NonCommercial
         <img src="images/round.png" alt="Rond de jambe">
         <br>image credit: https://zh-yue.m.wikipedia.org/wiki/File:Santavuori-balettia-kaikille-ronddejambe.png
         <br>Attribution-NonCommercial
-        <img src="images/sautes.jpg" alt="Sautés">
+        <img src="images/sautes.JPG" alt="Sautés">
         <br>image credit: https://www.pinterest.com/pin/809873945477158000/visual-search/?x=0&y=37&w=563&h=382&cropSource=4&full_feed_title=Artwork&imageSignature=ea9a7e52286ab03b7a678f9dd7c8d77c
         <br>Attribution-NonCommercial
-        <img src="images/ballet.jpg" alt="Ballet Music">
+        <img src="images/ballet.JPG" alt="Ballet Music">
 
       </ul>
       <hr>
