--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -93,7 +93,7 @@
             <section id="port">
                 <div class="port-img">
                     <h1>1. Port de bras</h1>
-                    <img src="images/Port-de-bras.jpg" alt="Port de bras">
+                    <img src="images/port-de-bras.JPG" alt="Port de bras">
                     <p class="credit">image credit: https://www.balletbodysculpture.com/blog/2019/1/13/9-basic-ballet-terms-benefits
                         <br>Attribution-NonCommercial
                     </p>
@@ -119,7 +119,7 @@
                 <div class="pile-img2">    
                     <div id="demi">
                         <p class="sub-title">Demi Pile</p>
-                        <img  src="images/demi-plie.jpg" alt="Demi Pile">
+                        <img  src="images/demi-plie.JPG" alt="Demi Pile">
                         <p class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
                         </p>
                     </div>
@@ -134,7 +134,7 @@
             <section id="eleves">
                 <div class="eleves-img">
                     <h1>3. Elevés and relevés</h1>
-                    <img src="images/releve-eleve.jpg" alt="Elevés and relevés">
+                    <img src="images/releve-eleve.JPG" alt="Elevés and relevés">
                     <p class="credit">image credit: https://www.pinterest.com/pin/375276581458634368/
                     </p>
                 </div>
@@ -157,7 +157,7 @@
                         or to the back (derriére), and they stretch leg muscles and help improve turnout (outward rotation of your legs and feet). </P>
                 </div>
                 <div class="tendu-img2">           
-                    <img src="images/tendu.jpg" alt="Tendu2">
+                    <img src="images/tendu.JPG" alt="Tendu2">
                 </div>
             </section>
             <section id="degages">
@@ -189,7 +189,7 @@
             <section id="sautes">
                 <div class="sautes-img">
                     <h1>7. Sautés</h1>
-                    <img src="images/sautes.jpg" alt="Sautés">
+                    <img src="images/sautes.JPG" alt="Sautés">
                     <p class="credit">image credit: https://www.pinterest.com/pin/809873945477158000/visual-search/?x=0&y=37&w=563&h=382&cropSource=4&full_feed_title=Artwork&imageSignature=ea9a7e52286ab03b7a678f9dd7c8d77c
                         <br>Attribution-NonCommercial
                     </p>
@@ -204,7 +204,7 @@
         </section>
         <section class="music">
             <h1>Ballet Music</h1>
-            <a class="ballet" href="https://soundcloud.com/music-for-ballet-classes"><img src="images/ballet.jpg" alt="Ballet Music"></a>
+            <a class="ballet" href="https://soundcloud.com/music-for-ballet-classes"><img src="images/ballet.JPG" alt="Ballet Music"></a>
 
             <p class="music-msg"><span class="firstletter">Music for Ballet</span>
             Ballet has evolved into a popular and highly professional dance form with its vocabulary. The vocabulary of ballet has mainly stayed in French, and been learned and communicated by ballet professional dancers from all over the universe.
