added to my homepage

--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -281,7 +281,7 @@
         <br>Attribution-NonCommercial
         <img src="images/pile.jpg" alt="Pile">
         <br>image credit: https://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
-        <img  src="images/demi-plie.JPG" alt="Demi Pile">
+        <img  src="images/demi-plie.png" alt="Demi Pile">
         <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs       
         <img src="images/grand-pile.jpg" alt="Grand Pile">
         <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
