--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -119,7 +119,7 @@
                 <div class="pile-img2">    
                     <div id="demi">
                         <p class="sub-title">Demi Pile</p>
-                        <img  src="images/demi-plie.png" alt="Demi Pile">
+                        <img  src="images/demi-plie.jpg" alt="Demi Pile">
                         <p class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
                         </p>
                     </div>
