added to my homepage

--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -69,7 +69,7 @@
         <section class="feet">
             <div class="feet-img">
                 <h3>Feet Positions</h3>
-                <img src="images/feet-position.png" alt="Feet Positions">
+                <img src="images/feet-position.jpg" alt="Feet Positions">
                 <p class="credit">image credit: https://www.dreamstime.com/ballerina-feet-pointe-shoes-five-ballet-positions-ballerina-feet-pointe-shoes-five-ballet-positions-vector-illustration-eps-image118067397
                     <br>Attribution-NonCommercial
                 </p>
