--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -273,7 +273,7 @@
         <br>Author: Artsashina
         <br>image credit: https://www.supercoloring.com/coloring-pages/ballet-positions
         <br>Attribution-NonCommercial
-        <img src="images/feet-position.png" alt="image for page3">
+        <img src="images/feet-position.jpg" alt="image for page3">
         <br>image credit: https://balletaz.org/classical-ballet/
         <br>Attribution-NonCommercial
         <img src="images/port-de-bras.JPG" alt="Port de bras">
