added to my homepage

--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -69,7 +69,7 @@
         <section class="feet">
             <div class="feet-img">
                 <h3>Feet Positions</h3>
-                <img src="images/feet-position.jpg" alt="Feet Positions">
+                <img src="images/feet-position.png" alt="Feet Positions">
                 <p class="credit">image credit: https://www.dreamstime.com/ballerina-feet-pointe-shoes-five-ballet-positions-ballerina-feet-pointe-shoes-five-ballet-positions-vector-illustration-eps-image118067397
                     <br>Attribution-NonCommercial
                 </p>
@@ -119,13 +119,13 @@
                 <div class="pile-img2">    
                     <div id="demi">
                         <p class="sub-title">Demi Pile</p>
-                        <img  src="images/demi-plie.jpg" alt="Demi Pile">
+                        <img  src="images/demi-plie.png" alt="Demi Pile">
                         <p class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
                         </p>
                     </div>
                     <div id="grand">
                         <p class="sub-title">Grand Pile</p>
-                        <img src="images/grand-pile.jpg" alt="Grand Pile">
+                        <img src="images/grand-pile2.jpg" alt="Grand Pile">
                         <p class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
                         </p>
                     </div>
