--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -273,7 +273,7 @@
         <br>Author: Artsashina
         <br>image credit: https://www.supercoloring.com/coloring-pages/ballet-positions
         <br>Attribution-NonCommercial
-        <img src="images/feet-position.jpg" alt="image for page3">
+        <img src="images/feet-position.png" alt="image for page3">
         <br>image credit: https://balletaz.org/classical-ballet/
         <br>Attribution-NonCommercial
         <img src="images/port-de-bras.JPG" alt="Port de bras">
@@ -281,9 +281,9 @@
         <br>Attribution-NonCommercial
         <img src="images/pile.jpg" alt="Pile">
         <br>image credit: https://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
-        <img  src="images/demi-plie.jpg" alt="Demi Pile">
+        <img  src="images/demi-plie.png" alt="Demi Pile">
         <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs       
-        <img src="images/grand-pile.jpg" alt="Grand Pile">
+        <img src="images/grand-pile2.jpg" alt="Grand Pile">
         <br>image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs
         <img src="images/releve-eleve.JPG" alt="Elevés and relevés">
         <br>image credit: https://www.pinterest.com/pin/375276581458634368/
